# terraflux

./: .gitignore  README.md
.github/workflows/: validate.yml
docs/: README.md  crossings.parquet  flat.html  gates.json  index.html  table.html
experiments/hormuz-flow/: README.md  build_site.py  commodity.py  export_web_parquet.py  gate.py  generate_and_query.py  pyproject.toml  smoke_site.py  test_commodity.py  test_gate.py  test_generate_and_query.py  test_published_data.py
experiments/hormuz-flow/fixtures/: strait_of_malacca.csv  telemetry.csv
experiments/hormuz-flow/web/: README.md  index.html  map.html
experiments/live-ais/: README.md  pyproject.toml  receiver.py  test_receiver.py
