[project]
name = "terraflux-hormuz-flow-experiment"
version = "0.1.0"
description = "Local DuckDB and Parquet experiment for Terraflux"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.5.0",
    # Required by DuckDB to register Python scalar UDFs (the gate-distance
    # function). See gate.py and generate_and_query.py.
    "numpy==2.3.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.12"
